# fraud-investigation-env

./: .env.example  .gitignore  DEBUG_GUIDE.md  Dockerfile  IMPLEMENTATION_CHECKLIST.md  INVESTIGATION_REPORT.md  LOGGING_SETUP.md  README.md  client.py  debug_full_episode.py  debug_reward_calculation.py  debug_test.py  docker-compose.yml  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  test_logging.py
server/: Dockerfile  app.py  case_generator.py  environment.py  grader.py  requirements.txt
