[project]
name = "fraud-investigation-env"
version = "0.1.0"
description = "Fraud investigation OpenEnv environment"
authors = [{name = "Khushi Kumari"}]
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openenv-core>=0.2.0",
    "openai>=2.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.28.0",
]
[project.scripts]
server = "server.app:main"